[package]
name = "remus"
version = "0.2.0"
authors = ["Zakhary Kaplan <me@zakhary.dev>"]
edition = "2021"
description = "Modular emulator creation toolkit"
repository = "https://github.com/kaplanz/remus"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.5"
thiserror = "1.0.49"
